legacy/apps/thelounge/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: thelounge
spec:
  selector:
    app: thelounge
  ports:
    - protocol: TCP
      port: 80
      targetPort: 9000
